--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 
+body {
+  font-family: "Montserrat";
+}
+
 #title {
   background-color: #ffc468;
+  color: #fff;
 }
 
 .container-fluid {
@@ -8,7 +13,45 @@
 }
 
 h1 {
-  font-family: "Montserrat-Black";
-  font-size: 3rem;
+  /* font-family: "Montserrat-Black"; */
+  font-size: 3.5rem;
   line-height: 1.5;
+}
+
+/* Navigation Bar */
+
+.navbar {
+  padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.nav-item {
+  padding: 0 18px;
+}
+
+.nav-link {
+  font-size: 1.2rem;
+  font-family: "Montserrat-Light";
+}
+
+/* Download Buttons */
+
+.download-btn {
+  margin: 5% 3% 5% 0;
+}
+
+/* Image */
+
+.title-img {
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+.rotated {
+  transform: rotate(40deg); /* Equal to rotateZ(45deg) */
 }
