--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Montserrat";
 }
@@ -19,22 +18,15 @@ h1 {
 }
 
 h3 {
-  font-family: "Montserrat-Bold"
-
-}
-
-/*Feature section class */
-
-.feature h3 {
   font-family: "Montserrat-Bold";
+  font-size: 1.5rem;
 }
 
-.feature p {
+p {
   color: #8f8f8f
 }
 
 /* Navigation Bar */
-
 .navbar {
   padding: 0 0 4.5rem;
 }
@@ -55,18 +47,36 @@ h3 {
 }
 
 /* Download Buttons */
-
 .download-btn {
   margin: 5% 3% 5% 0;
 }
 
 /* Image */
-
 .title-img {
   width: 60%;
   transform: rotate(25deg);
 }
 
 .rotated {
-  transform: rotate(40deg); /* Equal to rotateZ(45deg) */
+  transform: rotate(40deg);
+  /* Equal to rotateZ(45deg) */
+}
+
+/*Feature section class */
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.icon:hover {
+  color: #ffc468;
 }
