--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ h1 {
   line-height: 1.5;
 }
 
+h2 {
+  font-family: "Montserrat-bold";
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
 h3 {
   font-family: "Montserrat-Bold";
   font-size: 1.5rem;
@@ -79,4 +85,20 @@ p {
 
 .icon:hover {
   color: #ffc468;
+}
+
+
+/* Testimonial section */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-img {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
