--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,17 @@ p {
   border-radius: 100%;
   margin: 20px;
 }
+
+
+/* Press section */
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
