--- a/css/styles.css
+++ b/css/styles.css
@@ -119,3 +119,13 @@ p {
   width: 15%;
   margin: 20px 20px 50px;
 }
+
+/* Pricing section */
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  margin: 3% 1%;
+}
